fix scrolling on mobile v2

--- a/style.scss
+++ b/style.scss
@@ -56,7 +56,7 @@ main {
     position: relative;
     width: 1440px;
     max-width: 100%;
-    height: 1080px;
+    min-height: 1080px;
     max-height: 100%;
     display: flex;
     justify-content: center;
@@ -316,7 +316,8 @@ footer {
 @media only screen and (max-width: 414px) {
     main {
         align-items: flex-start;
-        height: unset;
+        height: 100vh;
+        min-height: unset;
     }
 
     .container {
